# obs-augmented

./: CMakeLists.txt  buildspec.json
.github/workflows/: check-format.yaml
cmake/: BuildAssimp.cmake  BuildGlm.cmake  FetchOpenCV.cmake
data/assets/: Crown_02_v1dot4.dae  Crown_02_v1dot5.dae  Crown_03_v1dot4_PBRcol.dae  Crown_04_v1dot4_PBRref.dae  Crown_05_blend.dae  chub_v2_01_baked.glb  crown.dae  ghost.dae
data/effects/: draw3d.effect
src/: augmented-filter-data.h  augmented-filter.c  augmented-filter.cpp  augmented-filter.h  plugin-main.c  plugin-support.c.in  plugin-support.h
src/asset-utils/: asset-loader.cpp  asset-loader.h  asset-render.cpp  asset-render.h  render-utils.cpp  render-utils.h
src/obs-utils/: obs-utils.cpp  obs-utils.h
